Adds unformal German language; adds wallpaper version

--- a/translations/de_formal.json
+++ b/translations/de_formal.json
@@ -3,10 +3,10 @@
   "salutation": "Liebe Besucherin, lieber Besucher,",
   "intro": "Diese Seite protestiert gegen Teile der geplanten EU-Urheberrechtsreform, die bald vom Parlament der Europäischen Union verabschiedet werden soll.",
   "reasons": "Die geplante Reform könnte dazu führen, dass das freie Internet erheblich eingeschränkt wird. Selbst kleinste Unternehmen müssten fehleranfällige und technisch unausgereifte Upload-Filter für sämtliche ihrer Inhalte einsetzen (Artikel 13) und für minimale Textausschnitte aus Presseerzeugnissen Lizenzen erwerben, um das sogenannte Leistungsschutzrecht für Presseverleger einzuhalten (Artikel 11). Auch Urheber, die mit der Privatkopieabgabe (Artikel 12) wieder mehr an den Verleger abtreten müssen, sind betroffen. Dies könnte die Meinungs-, Kunst- und Pressefreiheit deutlich beeinträchtigen.",
-  "request": "Wir bitten dich deshalb darum ...",
+  "request": "Wir bitten Sie deshalb darum ...",
   "request_1": "... die Abgeordneten des Europäischen Parlaments zu kontaktieren und sie über Ihre Haltung zur geplanten Reform zu informieren.",
   "request_2": "... an den Demonstrationen teilzunehmen, die am 23. März 2019 in ganz Europa stattfinden.",
-  "request_3": "... dein demokratisches Recht wahrzunehmen und zwischen dem 23. und 26. Mai 2019 an der Wahl des EU-Parlaments teilzunehmen.",
+  "request_3": "... Ihr demokratisches Recht wahrzunehmen und zwischen dem 23. und 26. Mai 2019 an der Wahl des EU-Parlaments teilzunehmen.",
   "thank_you": "Danke.",
   "contact_parliament_link": "https://saveyourinternet.eu/",
   "demo_link": "https://savetheinternet.info/demos",
