--- a/translations/en.json
+++ b/translations/en.json
@@ -10,5 +10,6 @@
   "thank_you": "Thank you.",
   "contact_parliament_link": "https://saveyourinternet.eu/",
   "demo_link": "https://savetheinternet.info/demos",
-  "election_link": "http://www.europarl.europa.eu/at-your-service/en/be-heard/elections"
+  "election_link": "http://www.europarl.europa.eu/at-your-service/en/be-heard/elections",
+  "wallpaper": "Background"
 }
