Better words for Article 12

--- a/translations/en.json
+++ b/translations/en.json
@@ -2,8 +2,8 @@
   "headline": "This Site is currently unavailable.",
   "salutation": "Dear visitor,",
   "intro": "This site is protesting against parts of the planned EU copyright reform, which will soon be adopted by the European Parliament.",
-  "reasons": "The proposed reform could severely restrict the free Internet. Even the smallest companies would have to use error-prone and technically immature upload filters for all their content (Article 13) and acquire licenses for minimal text excerpts from press products to comply with the so-called ancillary copyright for press publishers (Article 11). Because of Article 12 creators and authors have a worse negotiation position than before towards publishers. This could significantly affect the freedom of opinion, art and the press.",
-  "request": "Therefore we ask you for it ...",
+  "reasons": "The proposed reform could severely restrict the free Internet. Even the smallest companies would have to use error-prone and technically immature upload filters for all their content (Article 13) and acquire licenses for minimal text excerpts from press products to comply with the so-called ancillary copyright for press publishers (Article 11). Furthermore because of Article 12 creators and authors have a worse negotiation position than before towards publishers. This could significantly affect the freedom of opinion, art and the press.",
+  "request": "Therefore we ask you ...",
   "request_1": "... to contact the Members of the European Parliament and to inform them about your position on the planned reform.",
   "request_2": "... to participate in the demonstrations that will take place on March 23rd, 2019 throughout Europe.",
   "request_3": "... to participate in the election of the European Parliament on 23–26 May 2019.",
